testdata/golden/sema/invalid/extern_missing_return.fmt
// scenario: extern method declares return but misses a return
type Point = {
    x: int,
    y: int
}

extern<Point> {
    fn __add(self: &Point, other: &Point) -> Point {
    }
}
